# Advanced-C-Programming-Course-Udemy

./: .gitignore  CMakeLists.txt  README.md  main.c
Advanced Data Types/: Flexible Array Members.c  Variable Length Arrays.c
Advanced_C _rogramming_Course_Udemy/Storage Classes/: sum.c
Advanced_C _rogramming_Course_Udemy/Working with Larger Programs Exercises/Calculator/Advanced/: advanced.h  advanced.h.gch
Storage Classes/: declaringVariables.c  display.c  loop.c
Working with Larger Programs Exercises/Calculator/Operations/: operations.c  operations.h  operations.h.gch
advanced_c_programming_course_udemy/advanced_data_types/: complex_number_types.c
advanced_c_programming_course_udemy/working_with_larger_programs_exercises/calculator/advanced/: advanced.c
advanced_c_programming_course_udemy/working_with_larger_programs_exercises/geometry_exercise/: geometry.c  geometry.h
katas/: count_smileys.c
